a bunch of modifications4

--- a/style.css
+++ b/style.css
@@ -15,10 +15,11 @@ a:hover{
     text-decoration: line-through;
     text-transform: uppercase;
     text-decoration-color: lightcoral;
+    transition-duration: 1s;
 }
 
 ul {
-    list-style-type: circle;
+    list-style-type: none;
 }
 input,label{
     display:block;
