a bunch of modifications6

--- a/style.css
+++ b/style.css
@@ -39,5 +39,5 @@ input,label{
     animation-iteration-count: infinite;
 }
 .prime{
-    background-color: rgb(80, 63, 63);
+    background-image: url('maxresdefault\ \(1\).jpg');
 }
